public/css/serial.css
body{
    margin: 0px;
    padding: 0px;
    height: 100vh;
    -ms-overflow-style: none;
}

body::-webkit-scrollbar, .achievements::-webkit-scrollbar, .serial-results::-webkit-scrollbar, .show::-webkit-scrollbar{
    display: none;
}

.menubar{
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    background-color: #5b5b5b;
    color: white;
    height: 60px;
}

.title{
    display: flex;
    font-size: 50px;
    height: 60px;
}

.account{
    padding: 0px 10px 10px 10px;
    padding-top: 100%;
    background-color: #212121;
    border-bottom-left-radius: 10px;
}

.indexPage{
    padding: 0px 10px 10px 10px;
    padding-top: 100%;
    background-color: #212121;
    border-bottom-right-radius: 10px;
}

.menubar > label:hover{
    cursor: pointer;
    background-color: rgb(168, 82, 82);
}

.serialPage:hover{
    cursor: pointer;
    background-color: #212121;
    border-bottom-left-radius: 10px;
}

.quotePage:hover{
    cursor: pointer;
    background-color: #212121;
    border-bottom-right-radius: 10px;
}

.results{
    display: flex;
    height: 100%;
}

.serial{
    overflow: hidden;
    background-color: beige;
    width: 100%;
}

.serial-submenu{
    display: flex;
    justify-content: space-around;
    height: 24px;
    background-color: #5b5b5b;
    color: white;
    padding: 3px;
}

.serial-filter{
    display: flex;
}

.serial-filter > label:hover, .serial-filter > input:hover, #serial-search:hover, .serial-submenu > button:hover{
    cursor: pointer;
}

#serial-create{
    display: none;
}

.serial-results{
    display: none;
    flex-wrap: wrap;
    height: 95%;
    overflow: overlay;
    padding-right: 10px;
    justify-content: space-around;
    -ms-overflow-style: none;
}

.tv{
    display: flex;
    flex-direction: column;
    margin: 10px;
    width: 200px;
    height: 295px;
    border-style: outset;
    background-color: white;
    padding: 5px;
}

.tv > img{
    width: 200px;
    height: 200px;
    border-radius: 10px;
}

.tv-title, .tv-description, .tv-type{
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    padding: 2px;
}

.tv-title{
    text-align: center;
    font-size: larger;
    font-weight: bold;
}

.tv-title:hover, .tv-description:hover, .tv-type:hover, .tv > button:hover{
    cursor: pointer;
}

.tv:hover{
    border-style: inset;
    cursor: pointer;
    background-color: rgb(244,238,177);
}

#add-wish, #add-watch{
    background-image: url('https://cdn.pixabay.com/photo/2014/04/02/10/41/button-304224_960_720.png');
    background-size: 100%;
    height: 20px;
    width: 20px;
    border-radius: 20px;
    margin: 5px 25px 0px;
    align-self: unset;
}

#add-wish, #add-like, #add-watch, #like-add{
    background-size: 100%;
    height: 20px;
    width: 20px;
    align-self: flex-end;
}

#add-wish{
    background-image: url('https://cdn.pixabay.com/photo/2014/04/02/10/41/button-304224_960_720.png');
    border-radius: 20px;
}

#add-watch{
    background-image: url('https://cdn.pixabay.com/photo/2015/06/09/16/12/icon-803718_960_720.png');
    border-radius: 20px;
}

#add-like{
    background-image: url('https://img.icons8.com/carbon-copy/100/000000/filled-like.png');
}

#like-add{
    background-image: url('https://i.imgur.com/e1xbhVr.png');
}

.listBtn:hover, #add-like, #like-add{
    cursor: pointer;
}

.show{
    display: flex;
    flex-direction: column;
    height: 95%;
    overflow: overlay;
    -ms-overflow-style: none;
}

.admin-menu{
    margin: 10px;
    flex-direction: row-reverse;
    display: flex;
}

.show-tv{
    display: flex;
    flex-direction: column;
}

.show-title{
    font-size: xxx-large;
    font-weight: bold;
    padding-left: 10px;
}

.show-type{
    background-color: rgb(255, 128, 128);
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    padding: 4px 10px 4px 10px;
    font-size: x-large;
}

.show-des-img{
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px 0px 20px 10px;
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
}

.image{
    background-color: white;
    padding: 10px;
    padding-bottom: 30px;
    border: outset;
}

.image > img{
    width: 400px;
    height: 400px;
    border-radius: 10px;
}

.show-description{
    margin: 60px;
    width: 600px;
}

.edit-tv, .create-tv{
    display: none;
    flex-direction: column;
    border: solid;
    margin: 20px;
    width: 650px;
    align-self: center;
    border-radius: 10px;
    background-color: #212121;
    color: white;
}

.edit-tv > div, .edit-buttons, .create-tv > div, .create-buttons{
    display: flex;
    margin: 5px;
}

.edit-tv > div > label, .create-tv > div > label{
    width: 90px;
}

.edit-tv > div > input, #edit-type, .edit-buttons > button, .create-tv > div > input, #create-type, .create-buttons > button{
    flex: 1;
}

.quotes-submenu{
    margin: 40px;
    display: flex;
    flex-direction: row;
}

.quote-title{
    font-size: x-large;
    font-weight: bold;
    text-align: center;
    flex:5;
}

#adding-quote{
    opacity: 0;
}

.new-quote{
    display: none;
    border: solid;
    width: 650px;
    padding: 10px;
    align-self: center;
    margin-bottom: 20px;
    background-color: #212121;
    color: white;
    border-radius: 10px;
}

.new-quote > div{
    display: flex;
    flex-direction: row;
    margin-top: 10px;
    margin-bottom: 10px;
}

.new-quote > label, .edit-tv > label, .create-tv > label{
    font-size: larger;
    display: flex;
    justify-content: center;
}

#new-quote{
    flex:1;
    margin-left: 10px;
    margin-right: 10px;
}

#cancel-quote{
    float: right;
}

.quotes-results{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.quote-edit-label, .comment-edit-label{
    display: none;
    margin-bottom: 5px;
}

.quote-edit{
    flex: 1;
}

.like-date{
    display: flex;
    justify-content: space-between;
}

.comment-edit{
    flex: 1;
    margin-right: 5px;
}

.quote-type{
    margin-left: 3px;
    margin-right: 3px;
}

.quote-comment{
    margin: 10px;
    width: 700px;
    background-color: #5b5b5b;
    padding: 10px;
    border-radius: 10px;
}

.quote{
    padding: 10px;
    margin: 10px;
    background-color: rgb(255, 128, 128);
    border-radius: 10px;
}

.new-comment{
    padding: 10px;
    color: white;
}

.comment {
    padding: 10px 25px 10px 25px;
    background-color: rgb(244,238,177);
    border-radius: 10px;
    margin: 10px;
}

.comment-date{
    float: right;
}

.new-comment-input{
    width: 630px;
}

footer{
    display: flex;
    background-color: #5b5b5b;
    color: white;
    justify-content: space-around;
    padding: 2px 0px 5px 0px;
}

li{
    list-style: none;
    padding: 0px 15px 0px 15px;
}

li:hover{
    cursor: pointer;
    background-color: #212121;
    border-radius: 10px;
}

a{
    color: white;
}

#e404{
    display: flex;
    width: 500px;
    height: 500px;
    align-self: center;
}

@media (max-width: 700px) {

        #serial-search{
            background-size: 100%;
            height: 20px;
            width: 20px;
            align-self: center;
            background-image: url('https://cdn.pixabay.com/photo/2017/01/10/23/01/seo-1970475_960_720.png');
            font-size: 0;
        }

        #serial-create{
            background-size: 100%;
            height: 20px;
            width: 20px;
            align-self: center;
            background-image: url('https://cdn.pixabay.com/photo/2016/03/21/05/05/plus-1270001_960_720.png');
            font-size: 0;
        }
        .create-tv{
            width: 70%;
        }
        .edit-tv{
            width: 70%;
        }
        
    #e404{
        width: 100%;
        height: 100%;
        align-self: center;
    }
    .quote-comment{
        width: 90%;
        height: 90%;
    }
    .new-comment-input{
        width: 90%;

    }
    .show-des-img {
        flex-direction: column;
    }
    
}

